--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Run test 
         run: npm run build
       - name: Deploy App
-        run: netlify deploy --site ${{ env.ID_SITE_NETLIFY }} --auth ${{ env.TOKEN_NETLIFY }} --dir build/ --prod
+        run: netlify deploy --site ${{ secrets.ID_SITE_NETLIFY }} --auth ${{ secrets.TOKEN_NETLIFY }} --dir build/ --prod
