--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Build Artefact 
         run: npm run build
   test-react:
+    needs: build-react
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
@@ -31,6 +32,7 @@ jobs:
       - name: Run test 
         run: npm run test
   deploy-react:
+    needs: [build-react, test-react]
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
